@@ -1,5 +1,7 @@
 [Changes 1.2.2]
 
+* Apply patch from cpet to make autogen.sh prompt to run configure. (caf)
+
 * Improve some messages in /window size (reported by cpet). (caf)
 
 * Improve messages around DCC auto-get / auto-rename / auto-resume. (caf)
